--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@aragon/apps-shared-minime": "^1.0.1",
     "@aragon/apps-token-manager": "2.1.0",
     "@aragon/apps-voting": "2.1.0",
-    "@aragon/os": "^4.2.1",
-    "core-js": "^3.3.5"
-  },
+    "@aragon/os": "^4.2.1"
+
+},
   "devDependencies": {
+    "core-js":"^3.3.5",
     "@aragon/cli": "^6.0.0",
     "@aragon/test-helpers": "^2.0.0",
     "babel-eslint": "^10.0.2",
